# instructa-mate

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  defered-grill.md  gliding-instructor-companion-handover.md  parser-build.md  pyproject.toml
bakeoff/: FINDINGS.md  extract_bakeoff.py
docs/: gpc-ingestion-findings.md
evals/: golden_set.json  gpc_unit_tests_unit1.json  gpc_unit_tests_unit10.json  gpc_unit_tests_unit11.json  gpc_unit_tests_unit12.json  gpc_unit_tests_unit13a.json  gpc_unit_tests_unit14a.json  gpc_unit_tests_unit15.json  gpc_unit_tests_unit16.json  gpc_unit_tests_unit17.json  gpc_unit_tests_unit2.json  gpc_unit_tests_unit23.json  gpc_unit_tests_unit24.json  gpc_unit_tests_unit25.json  gpc_unit_tests_unit27.json  gpc_unit_tests_unit28.json  gpc_unit_tests_unit29.json  gpc_unit_tests_unit3.json  gpc_unit_tests_unit4.json  gpc_unit_tests_unit5.json  gpc_unit_tests_unit6.json  gpc_unit_tests_unit7.json  gpc_unit_tests_unit8.json  gpc_unit_tests_unit9.json  refusal_probes.json  self_check_pilot_qa_runs.json
scripts/: run_self_check_qa.py
terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.tfvars.example  tf.sh
tests/: conftest.py  test_chunker_children.py  test_chunker_corpus.py  test_chunker_errors.py  test_chunker_trainer5.py  test_corpus_generalization.py  test_gpc_unit_tests.py  test_gpc_units.py  test_pilot_unit1.py  test_plan_sync.py  test_reading_order_and_lists.py  test_stage3_ingest.py  test_stage3_ingest_live.py  test_stage3_retrieve.py  test_stage3_retrieve_live.py  test_stage4_qa.py  test_stage4_qa_live.py  test_text_retention.py  (+2 more)
(+109 files in other folders)
