[project]
name = "instructamate"
version = "0.1.0"
description = "InstructaMate RAG ingestion — stage-1 deterministic PDF -> verified Markdown parser."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pymupdf>=1.28",   # primary text layer (settled by the extractor bake-off)
    "pdfplumber>=0.11", # table sidekick (not used yet in slice 1)
    "pymongo>=4.9",     # Atlas ingest + Vector Search index ensure
    "voyageai>=0.3",    # explicit voyage-4-large embeddings
    "anthropic>=0.40",  # refuse-or-cite Q&A completion
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.package-data]
instructamate = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
